--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 				</section>
 			</div>
 		</main>
+		<script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
 		<script src="script.js"></script>
 	</body>
 </html>
