form events lookin mighty fine

--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
 			<div class="wrapper landingPage">
 				<section class="drinkFilters">
 					<h2>Search drinks by:</h2>
-					<form action="#">
-						<label for="drinkByName">Drink by Name</label><input type="text" />
+					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
+						<label for="drinksByName">Drink by Name</label><input type="text" name="drinksByName" id="drinksByName" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form action="#">
-						<label for="drinkByAlcohol">Drink by Alcohol</label
-						><input type="text" />
+					<form action="#" name="drinksByAlcoholForm" class="drinksByAlcoholForm form">
+						<label for="drinksByAlcohol">Drink by Alcohol</label
+						><input type="text" name="drinksByAlcohol" id="drinksByAlcohol" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form action="#">
-						<label for="drinkByIngredient">Drink by Ingredient</label
-						><input type="text" />
+					<form action="#" name="drinksByIngredientForm" class="drinksByIngredientForm form">
+						<label for="drinksByIngredient1">Drink by Ingredient</label
+						><input type="text" name="drinksByIngredient1" id="drinksByIngredient1" />
+						<label for="drinksByIngredient2">Drink by Ingredient</label
+							><input type="text" name="drinksByIngredient2" id="drinksByIngredient2" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form action="#">
+					<form action="#" name="feelingLuckyForm" class="feelingLuckyForm form">
 						<label for="feelingLucky">I'm Feeling Lucky(Punk)</label
-						><input type="text" />
+						><input type="text" name="feelingLucky" id="feelingLucky" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
 				</section>
