--- a/index.html
+++ b/index.html
@@ -16,30 +16,67 @@
 	<body>
 		<header>
 			<div class="wrapper headerWrapper">
-				<h1>Make Me A Drink</h1>
+				<div class="titleContainer">
+					<h2>
+						Mixology isn't magic, but we can convince your friends otherwise
+					</h2>
+					<h1>Mix Me A Drink</h1>
+				</div>
+				<div class="decoration"></div>
+
+				<div class="decoration2">
+					<span class="dot1">.</span>
+					<span class="dot2">.</span>
+					<span class="dot3">.</span>
+				</div>
 			</div>
 		</header>
 		<main>
 			<div class="wrapper landingPage">
 				<section class="drinkFilters">
 					<h2>Search drinks by:</h2>
-					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
-						<label for="drinksByName">Drink by Name</label><input type="text" name="drinksByName" id="drinksByName" />
+					<form
+						action="#"
+						name="drinksByNameForm"
+						class="drinksByNameForm form"
+					>
+						<label for="drinksByName">Drink by Name</label
+						><input type="text" name="drinksByName" id="drinksByName" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form action="#" name="drinksByAlcoholForm" class="drinksByAlcoholForm form">
+					<form
+						action="#"
+						name="drinksByAlcoholForm"
+						class="drinksByAlcoholForm form"
+					>
 						<label for="drinksByAlcohol">Drink by Alcohol</label
 						><input type="text" name="drinksByAlcohol" id="drinksByAlcohol" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form action="#" name="drinksByIngredientForm" class="drinksByIngredientForm form">
+					<form
+						action="#"
+						name="drinksByIngredientForm"
+						class="drinksByIngredientForm form"
+					>
 						<label for="drinksByIngredient1">Drink by Ingredient</label
-						><input type="text" name="drinksByIngredient1" id="drinksByIngredient1" />
+						><input
+							type="text"
+							name="drinksByIngredient1"
+							id="drinksByIngredient1"
+						/>
 						<label for="drinksByIngredient2">Drink by Ingredient</label
-							><input type="text" name="drinksByIngredient2" id="drinksByIngredient2" />
+						><input
+							type="text"
+							name="drinksByIngredient2"
+							id="drinksByIngredient2"
+						/>
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form action="#" name="feelingLuckyForm" class="feelingLuckyForm form">
+					<form
+						action="#"
+						name="feelingLuckyForm"
+						class="feelingLuckyForm form"
+					>
 						<label for="feelingLucky">I'm Feeling Lucky(Punk)</label
 						><input type="text" name="feelingLucky" id="feelingLucky" />
 						<button type="submit">Mix me A Drink</button>
