ajax calls finished

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<!-- end of drink filters -->
 				<section class="drinkGallery">
 					<ul>
-						<li class="hiddenDrink drinkGalleryItem drink1">
+						<!-- <li class="hiddenDrink drinkGalleryItem drink1">
 							<h3>drink name</h3>
 							<img src="https://placebear.com/300/300" alt="" />
 						</li>
@@ -109,7 +109,7 @@
 						<li class="hiddenDrink drinkGalleryItem drink6">
 							<h3>drink name</h3>
 							<img src="https://placebear.com/300/300" alt="" />
-						</li>
+						</li> -->
 					</ul>
 				</section>
 			</div>
