--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
 		<main>
 			<div class="wrapper landingPage">
 				<section class="drinkFilters">
-					<h2>Search drinks by:</h2>
 					<form
 						action="#"
 						name="drinksByNameForm"
 						class="drinksByNameForm form"
 					>
-						<label for="drinksByName">Drink by Name</label
-						><input type="text" name="drinksByName" id="drinksByName" />
+						<label for="drinksByName">Drinks by Name</label
+						><input
+							type="text"
+							name="drinksByName"
+							id="drinksByName"
+							placeholder="ie. Long Island Iced Tea"
+						/>
 						<button type="submit">Mix me A Drink</button>
 					</form>
 					<form
@@ -49,8 +53,9 @@
 						name="drinksByAlcoholForm"
 						class="drinksByAlcoholForm form"
 					>
-						<label for="drinksByAlcohol">Drink by Alcohol</label
-						><input type="text" name="drinksByAlcohol" id="drinksByAlcohol" />
+						<label for="drinksByAlcohol">Drinks by Alcohol</label
+						><input type="text" name="drinksByAlcohol" id="drinksByAlcohol"
+						placeholder="ie. Tequila" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
 					<form
@@ -58,13 +63,13 @@
 						name="drinksByIngredientForm"
 						class="drinksByIngredientForm form"
 					>
-						<label for="drinksByIngredient1">Drink by Ingredient</label
-						><input
+						<label for="drinksByIngredient1">Drinks by Ingredient</label>
+						<input
 							type="text"
 							name="drinksByIngredient1"
 							id="drinksByIngredient1"
 						/>
-						<label for="drinksByIngredient2">Drink by Ingredient</label
+						<label for="drinksByIngredient2">Second Ingredient (optional)</label
 						><input
 							type="text"
 							name="drinksByIngredient2"
@@ -72,12 +77,13 @@
 						/>
 						<button type="submit">Mix me A Drink</button>
 					</form>
+
 					<form
 						action="#"
 						name="feelingLuckyForm"
 						class="feelingLuckyForm form"
 					>
-						<label for="feelingLucky">I'm Feeling Lucky(Punk)</label
+						<label for="feelingLucky">I'm Feeling Lucky</label
 						><input type="text" name="feelingLucky" id="feelingLucky" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
