--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
 <body>
 	<header>
 		<div class="wrapper headerWrapper">
-			<div class="titleContainer">
-				<h2>
-					Mixology isn't magic, but we can convince your friends otherwise
-				</h2>
-				<h1>Mix Me A Drink</h1>
-			</div>
+			<h1>Mix Me A Drink</h1>
+			<h2>Mixology isn't magic, but we can convince your friends otherwise</h2>
 			<div class="decoration"></div>
 
 			<div class="decoration2">
@@ -102,13 +98,10 @@
 					</div>
 					<div class="instructionParent">
 						<h3>how to mix it</h3>
-						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio,
-							repellendus totam sint reiciendis vero ab blanditiis itaque qui
-							similique voluptatem!
+						<p class="howToMixIt">
 						</p>
 					</div>
-					<p>put it in a glass you dumbass</p>
+					<p class="glassType"></p>
 				</div>
 				<!-- end drink info-->
 			</section>
