added scroll indicator

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<div class="decoration"></div>
 
 			<div class="decoration2">
+				<p class="scroll">scroll</p>
 				<span class="dot1">.</span>
 				<span class="dot2">.</span>
 				<span class="dot3">.</span>
