--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="imgContainer">
 					<img src="https://placebear.com/400/400" alt="" />
 				</div>
-				<h2>Drink Title</h2>
+				<h2 class="drinkName"></h2>
 				<div class="drinkInfo">
 					<div class="ingredientParent">
 						<h3>ingredients</h3>
