changes to html and js

--- a/index.html
+++ b/index.html
@@ -56,56 +56,37 @@
 			<!-- end of drink filters -->
 			<section class="drinkGallery">
 				<ul>
-					<!-- <li class="hiddenDrink drinkGalleryItem drink1">
-							<h3>drink name</h3>
-							<img src="https://placebear.com/300/300" alt="" />
-						</li>
-						<li class="hiddenDrink drinkGalleryItem drink2">
-							<h3>drink name</h3>
-							<img src="https://placebear.com/300/300" alt="" />
-						</li>
-						<li class="hiddenDrink drinkGalleryItem drink3">
-							<h3>drink name</h3>
-							<img src="https://placebear.com/300/300" alt="" />
-						</li>
-						<li class="hiddenDrink drinkGalleryItem drink4">
-							<h3>drink name</h3>
-							<img src="https://placebear.com/300/300" alt="" />
-						</li>
-						<li class="hiddenDrink drinkGalleryItem drink5">
-							<h3>drink name</h3>
-							<img src="https://placebear.com/300/300" alt="" />
-						</li>
-						<li class="hiddenDrink drinkGalleryItem drink6">
-							<h3>drink name</h3>
-							<img src="https://placebear.com/300/300" alt="" />
-						</li> -->
 				</ul>
 			</section>
-		</div>
-
-		<div class="wrapper drinkSpotlight">
-			<section class="drinkMain">
+			<section class="drinkSpotlight">
 				<div class="imgContainer">
 					<img src="https://placebear.com/400/400" alt="" />
 				</div>
-				<h2>Drink Title</h2>
+				<h2 class="drinkName">Drink Title</h2>
 				<div class="drinkInfo">
 					<div class="ingredientParent">
 						<h3>ingredients</h3>
 						<ul class="ingredientList">
-							
+							<li>Lorem ipsum dolor sit amet.</li>
+							<li>Lorem ipsum dolor sit amet.</li>
+							<li>Lorem ipsum dolor sit amet.</li>
+							<li>Lorem ipsum dolor sit amet.</li>
+							<li>Lorem ipsum dolor sit amet.</li>
 						</ul>
 					</div>
 					<div class="instructionParent">
 						<h3>how to mix it</h3>
 						<p class="howToMixIt">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis obcaecati exercitationem ipsum iure voluptas cumque error officia quisquam quo.
 						</p>
 					</div>
 					<p class="glassType"></p>
 				</div>
 				<!-- end drink info-->
 			</section>
+		</div>
+
+
 			<!--end drink main-->
 			<section class="relatedDrinks">
 				<h2>related drinks</h2>
