styling spotlight and preventing 'null' in measurements

--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
 				<ul>
 				</ul>
 			</section>
-			<section class="drinkSpotlight">
+
+			<section class="drinkSpotlight clearfix">
+
 				<div class="imgContainer">
 					<img src="https://placebear.com/400/400" alt="" />
 				</div>
+
 				<h2 class="drinkName">Drink Title</h2>
 				<div class="drinkInfo">
 					<div class="ingredientParent">
