--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 			<div class="decoration2">
 				<p class="scroll">scroll</p>
-				<span class="dot1">.</span>
-				<span class="dot2">.</span>
-				<span class="dot3">.</span>
+				<span class="dot1">•</span>
+				<span class="dot2">•</span>
+				<span class="dot3">•</span>
 			</div>
 		</div>
 	</header>
@@ -66,7 +66,8 @@
 				</div>
 
 				<h2 class="drinkName">Drink Title</h2>
-				<div class="drinkInfo">
+
+
 					<div class="ingredientParent">
 						<h3>ingredients</h3>
 						<ul class="ingredientList">
@@ -85,7 +86,7 @@
 						</p>
 					</div>
 					<p class="glassType"></p>
-				</div>
+
 				<!-- end drink info-->
 			</section>
 		</div>
