split ingredients list

--- a/index.html
+++ b/index.html
@@ -34,62 +34,28 @@
 		<main>
 			<div class="wrapper landingPage">
 				<section class="drinkFilters">
-					<form
-						action="#"
-						name="drinksByNameForm"
-						class="drinksByNameForm form"
-					>
+					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
 						<label for="drinksByName">Drinks by Name</label
-						><input
-							type="text"
-							name="drinksByName"
-							id="drinksByName"
-							placeholder="ie. Long Island Iced Tea"
-						/>
+						><input type="text" name="drinksByName" id="drinksByName" placeholder="ie. Long Island Iced Tea" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form
-						action="#"
-						name="drinksByAlcoholForm"
-						class="drinksByAlcoholForm form"
-					>
+					<form action="#" name="drinksByAlcoholForm" class="drinksByAlcoholForm form">
 						<label for="drinksByAlcohol">Drinks by Alcohol</label
-						><input
-							type="text"
-							name="drinksByAlcohol"
-							id="drinksByAlcohol"
-							placeholder="ie. Tequila"
-						/>
+						><input type="text" name="drinksByAlcohol" id="drinksByAlcohol" placeholder="ie. Tequila" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
-					<form
-						action="#"
-						name="drinksByIngredientForm"
-						class="drinksByIngredientForm form"
-					>
+					<form action="#" name="drinksByIngredientForm" class="drinksByIngredientForm form">
 						<label for="drinksByIngredient1">Drinks by Ingredient</label>
-						<input
-							type="text"
-							name="drinksByIngredient1"
-							id="drinksByIngredient1"
-						/>
+						<input type="text" name="drinksByIngredient1" id="drinksByIngredient1" />
 						<label for="drinksByIngredient2">Second Ingredient (optional)</label
-						><input
-							type="text"
-							name="drinksByIngredient2"
-							id="drinksByIngredient2"
-						/>
+						><input type="text" name="drinksByIngredient2" id="drinksByIngredient2" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
 
-					<form
-						action="#"
-						name="feelingLuckyForm"
-						class="feelingLuckyForm form"
-					>
-						<label for="feelingLucky">I'm Feeling Lucky</label>
+					<form action="#" name="feelingLuckyForm" class="feelingLuckyForm form">
+						<!-- <label for="feelingLucky">I'm Feeling Lucky</label> -->
 						<!-- <input type="text" name="feelingLucky" id="feelingLucky" /> -->
-						<button type="submit">Mix me A Drink</button>
+						<button type="submit">I'm Feelin' Lucky</button>
 					</form>
 				</section>
 				<!-- end of drink filters -->
