adjusted feeling lucky button and logic

--- a/index.html
+++ b/index.html
@@ -52,11 +52,8 @@
 						<button type="submit">Mix me A Drink</button>
 					</form>
 
-					<form action="#" name="feelingLuckyForm" class="feelingLuckyForm form">
-						<!-- <label for="feelingLucky">I'm Feeling Lucky</label> -->
-						<!-- <input type="text" name="feelingLucky" id="feelingLucky" /> -->
-						<button type="submit">I'm Feelin' Lucky</button>
-					</form>
+					<button class="feelingLuckyButton">I'm Feelin' Lucky</button>
+					<button class="feelingLuckyButton">Mocktail Menu</button>
 				</section>
 				<!-- end of drink filters -->
 				<section class="drinkGallery">
