random mocktails menu logic

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<section class="drinkFilters">
 					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
 						<label for="drinksByName">Drinks by Name</label
-						><input type="text" name="drinksByName" id="drinksByName" placeholder="ie. Long Island Iced Tea" />
+						><input type="text" name="drinksByName" id="drinksByName" placeholder="ie. Margarita" />
 						<button type="submit">Mix me A Drink</button>
 					</form>
 					<form action="#" name="drinksByAlcoholForm" class="drinksByAlcoholForm form">
@@ -53,7 +53,7 @@
 					</form>
 
 					<button class="feelingLuckyButton">I'm Feelin' Lucky</button>
-					<button class="feelingLuckyButton">Mocktail Menu</button>
+					<button class="mocktailButton">Mocktail Menu</button>
 				</section>
 				<!-- end of drink filters -->
 				<section class="drinkGallery">
