--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 						<button type="submit">Mix me A Drink</button>
 					</form>
 					<form action="#" name="drinksByIngredientForm" class="drinksByIngredientForm form">
-						<label for="drinksByIngredient1">Drinks by Ingredient</label>
-						<input type="text" name="drinksByIngredient1" id="drinksByIngredient1" placeholder="ie. coffee" />
+						<label for="drinksByIngredient1" class="ingredient1Label">Drinks by Ingredient</label>
+						<input type="text" name="drinksByIngredient1" id="drinksByIngredient1" class="ingredient1Input placeholder="ie. coffee" />
 						<label for="drinksByIngredient2">Second Ingredient (optional)</label
 						><input type="text" name="drinksByIngredient2" id="drinksByIngredient2" placeholder="ie. sugar" />
 						<button type="submit">Mix me A Drink</button>
