overflow and accesibility

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 			</div>
 		</header>
 		<main>
+			
 			<div class="wrapper landingPage">
 				<section class="drinkFilters">
+					<!-- add sub container -->
 					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
 						<label for="drinksByName">Drinks by Name</label
 						><input type="text" name="drinksByName" id="drinksByName" placeholder="ie. Margarita" />
@@ -61,34 +63,29 @@
 					<ul></ul>
 				</section>
 
-				<section class="drinkSpotlight clearfix">
-					<div class="focusDrink">
-						<div class="imgContainer">
-							<img src="https://placebear.com/400/400" alt="" />
-						</div>
+				<section class="drinkSpotlight">
+					<div class="subContainer">
+						<div class="focusDrink clearfix">
+							<div class="imgContainer">
+								<img src="https://placebear.com/400/400" alt="" />
+							</div>
 
-						<h2 class="drinkName">Drink Title</h2>
+							<h2 class="drinkName">Drink Title</h2>
 
-						<div class="ingredientParent">
-							<h3>ingredients</h3>
-							<ul class="ingredientList"></ul>
+							<div class="ingredientParent">
+								<h3>ingredients</h3>
+								<ul class="ingredientList"></ul>
+							</div>
+							<div class="instructionParent">
+								<h3>how to mix it</h3>
+								<p class="howToMixIt"></p>
+							</div>
+							<p class="glassType"></p>
 						</div>
-						<div class="instructionParent">
-							<h3>how to mix it</h3>
-							<p class="howToMixIt"></p>
+						<div class="relatedDrinks forDesktop">
+							<h2>related drinks</h2>
+							<ul></ul>
 						</div>
-						<p class="glassType"></p>
-					</div>
-					<div class="relatedDrinks forDesktop">
-						<h2>related drinks</h2>
-						<ul>
-							<!-- <li>
-								<div class="smallImg">
-									<div class="smallDrinkTitle"></div>
-									<img src="" alt="" />
-								</div>
-							</li> -->
-						</ul>
 					</div>
 				</section>
 
