--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<main>
 			
 			<div class="wrapper landingPage">
+				<button class="hamburger">X</button>
 				<section class="drinkFilters">
 					<!-- add sub container -->
 					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
