fixed drink positioning

--- a/index.html
+++ b/index.html
@@ -32,29 +32,30 @@
 			</div>
 		</header>
 		<main>
-			
 			<div class="wrapper landingPage">
 				<button class="hamburger">X</button>
 				<section class="drinkFilters">
 					<!-- add sub container -->
-					<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
-						<label for="drinksByName">Drinks by Name</label
-						><input type="text" name="drinksByName" id="drinksByName" placeholder="ie. Margarita" />
-						<button type="submit">Mix me A Drink</button>
-					</form>
-					<form action="#" name="drinksByAlcoholForm" class="drinksByAlcoholForm form">
-						<label for="drinksByAlcohol">Drinks by Alcohol</label
-						><input type="text" name="drinksByAlcohol" id="drinksByAlcohol" placeholder="ie. Tequila" />
-						<button type="submit">Mix me A Drink</button>
-					</form>
-					<form action="#" name="drinksByIngredientForm" class="drinksByIngredientForm form">
-						<label for="drinksByIngredient1" class="ingredient1Label">Drinks by Ingredient</label>
-						<input type="text" name="drinksByIngredient1" id="drinksByIngredient1" class="ingredient1Input
-						placeholder="ie. coffee" />
-						<label for="drinksByIngredient2">Second Ingredient (optional)</label
-						><input type="text" name="drinksByIngredient2" id="drinksByIngredient2" placeholder="ie. sugar" />
-						<button type="submit">Mix me A Drink</button>
-					</form>
+					<div class="subContainerFilter">
+						<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
+							<label for="drinksByName">Drinks by Name</label
+							><input type="text" name="drinksByName" id="drinksByName" placeholder="ie. Margarita" />
+							<button type="submit">Mix me A Drink</button>
+						</form>
+						<form action="#" name="drinksByAlcoholForm" class="drinksByAlcoholForm form">
+							<label for="drinksByAlcohol">Drinks by Alcohol</label
+							><input type="text" name="drinksByAlcohol" id="drinksByAlcohol" placeholder="ie. Tequila" />
+							<button type="submit">Mix me A Drink</button>
+						</form>
+						<form action="#" name="drinksByIngredientForm" class="drinksByIngredientForm form">
+							<label for="drinksByIngredient1" class="ingredient1Label">Drinks by Ingredient</label>
+							<input type="text" name="drinksByIngredient1" id="drinksByIngredient1" class="ingredient1Input
+							placeholder="ie. coffee" />
+							<label for="drinksByIngredient2">Second Ingredient (optional)</label
+							><input type="text" name="drinksByIngredient2" id="drinksByIngredient2" placeholder="ie. sugar" />
+							<button type="submit">Mix me A Drink</button>
+						</form>
+					</div>
 
 					<button class="feelingLuckyButton">I'm Feelin' Lucky</button>
 					<button class="mocktailButton">Mocktail Menu</button>
@@ -65,7 +66,7 @@
 				</section>
 
 				<section class="drinkSpotlight">
-					<div class="subContainer">
+					<div class="subContainerSpotlight">
 						<div class="focusDrink clearfix">
 							<div class="imgContainer">
 								<img src="https://placebear.com/400/400" alt="" />
