responsiveness and drink logic

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 					<div class="subContainerSpotlight">
 						<div class="focusDrink clearfix">
 							<div class="imgContainer">
+								<h2 class="drinkName mobile">Drink Title</h2>
 								<img src="https://placebear.com/400/400" alt="" />
 							</div>
 
