logic for empty response and button disabling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 		</header>
 		<main>
 			<div class="wrapper landingPage">
-				<button class="hamburger">X</button>
+				<button class="hamburger">
+					<span class="bar bar1"></span><span class="bar bar2"></span><span class="bar bar3"></span>
+				</button>
 				<section class="drinkFilters">
 					<!-- add sub container -->
 					<div class="subContainerFilter">
@@ -95,18 +97,6 @@
 				<!-- end Drink Spotlight-->
 			</div>
 			<!-- end of landing page wrapper -->
-
-			<section class="relatedDrinks forMobile">
-				<h2>related drinks</h2>
-				<ul>
-					<!-- <li>
-						<div class="smallImg">
-							<div class="smallDrinkTitle"></div>
-							<img src="" alt="" />
-						</div>
-					</li> -->
-				</ul>
-			</section>
 			<footer>
 				<p>developed by Nick Reyno and Jim Wang, powered by the cocktailDB</p>
 			</footer>
