tentative final commit

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 		<main>
 			<div class="wrapper landingPage">
 				<button class="hamburger">
-					<span class="bar bar1"></span><span class="bar bar2"></span><span class="bar bar3"></span>
+					<span class="bar animateReverse bar1"></span><span class="bar animateReverse bar2"></span
+					><span class="bar animateReverse bar3"></span>
 				</button>
 				<section class="drinkFilters">
 					<!-- add sub container -->
