--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Mix Me A Drink</title>
+		<link rel="shortcut icon" href="./assets/mix
+		MeFavicon.png" type="image/x-icon" />
 		<script
 			src="https://code.jquery.com/jquery-3.4.0.min.js"
 			integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
