--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Mix Me A Drink</title>
-		<link rel="shortcut icon" href="./assets/mix
-		MeFavicon.png" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="./assets/mix
+		MeFavicon.png"
+			type="image/x-icon"
+		/>
 		<script
 			src="https://code.jquery.com/jquery-3.4.0.min.js"
 			integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
@@ -40,7 +44,6 @@
 					><span class="bar animateReverse bar3"></span>
 				</button>
 				<section class="drinkFilters">
-					<!-- add sub container -->
 					<div class="subContainerFilter">
 						<form action="#" name="drinksByNameForm" class="drinksByNameForm form">
 							<label for="drinksByName">Drinks by Name</label
@@ -96,7 +99,6 @@
 						</div>
 					</div>
 				</section>
-
 				<!-- end Drink Spotlight-->
 			</div>
 			<!-- end of landing page wrapper -->
